@@ -125,6 +125,11 @@ install-stamp: build-stamp
 		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/conf-hooks.d/cryptsetup
 	install -m 0755 debian/cryptsetup.reportbug-script \
 		$(CURDIR)/debian/cryptsetup/usr/share/bug/cryptsetup
+ifeq ($(shell dpkg-vendor --is Ubuntu && echo yes),yes)
+	mkdir -p $(CURDIR)/debian/cryptsetup/usr/share/apport/package-hooks
+	install -m 0644 debian/cryptsetup.apport \
+		$(CURDIR)/debian/cryptsetup/usr/share/apport/package-hooks/cryptsetup.py
+endif
 	touch $@
 
 binary-indep: build install
