@@ -30,8 +30,9 @@ cryptsetup (2:1.2.0-1) experimental; urgency=low
   * add a libcryptsetup1-udeb library package for debian-installer in order to
     satisfy cryptsetup-udeb dependencies with dynamically linked binary.
   * change 'XC-Package-Type: udeb' to 'Package-Type: udeb' in debian/control
+  * add debian/cryptsetup.apport from Ubuntu, install only for dist=Ubuntu.
 
- -- Jonas Meurer <mejo@debian.org>  Mon, 03 Jan 2011 01:54:16 +0100
+ -- Jonas Meurer <mejo@debian.org>  Thu, 06 Jan 2011 11:23:26 +0100
 
 cryptsetup (2:1.1.3-4) unstable; urgency=high
 
